--- a/less/style.less
+++ b/less/style.less
@@ -179,7 +179,7 @@ a{
     }
 
     &--university {
-        padding: 9px 20px;
+        padding: 12px 31px;
         font-size: 20px;
         border: none;
     }
@@ -1134,7 +1134,8 @@ display: none;
 .slider-line {
     position: relative;
     top: 2px;
-    width: 80%;
+    width: 95%;
+    max-width: 954.34px;
     height: 3px;
     background: linear-gradient(179.84deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
     &__list {
@@ -1412,7 +1413,7 @@ display: none;
         margin-right: 8px;
     }
     &__title {
-        font-family: Raleway;
+        // font-family: Raleway;
         font-style: normal;
         font-weight: 800;
         font-size: 100px;
@@ -1476,7 +1477,7 @@ display: none;
     &__years {
         padding: 0 8px;
         border: 2px solid #fff;
-        font-family: Raleway;
+        // font-family: Raleway;
         font-style: normal;
         font-weight: bold;
         font-size: 34px;
