--- a/css/style.css
+++ b/css/style.css
@@ -178,6 +178,12 @@ a {
 .diamond-decorate--red {
   background: linear-gradient(206.74deg, #ff0000 9.11%, #ce0000 98.12%);
 }
+.diamond-decorate--grey {
+  background: linear-gradient(137.45deg, #f4f4f4 -0.37%, #b8b8b8 104.82%);
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+  border-radius: 28px;
+  transform: matrix(-0.71, -0.69, -0.72, 0.71, 0, 0);
+}
 .diamond-decorate .diamond-decorate-transparent {
   top: 90%;
   left: 40%;
@@ -1342,6 +1348,11 @@ summary {
   position: absolute;
   right: 95px;
   bottom: -65px;
+}
+.feedback .diamond-decorate {
+  left: 128px;
+  top: -47px;
+  z-index: -1;
 }
 .feedback-slider {
   border: 6px solid #0031C4;
