--- a/less/style.less
+++ b/less/style.less
@@ -219,6 +219,15 @@ a{
     &--red {
         background: linear-gradient(206.74deg, #FF0000 9.11%, #CE0000 98.12%);
     }
+
+    &--grey {
+        background: linear-gradient(137.45deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
+        box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+        border-radius: 28px;
+        transform: matrix(-0.71, -0.69, -0.72, 0.71, 0, 0);
+    
+    }
+
     .diamond-decorate-transparent {
         top: 90%;
         left: 40%;
@@ -1635,6 +1644,12 @@ display: none;
         position: absolute;
         right: 95px;
         bottom: -65px;
+    }
+
+    .diamond-decorate {
+        left: 128px;
+        top: -47px;
+        z-index: -1;
     }
 }
 .feedback-slider {
