--- a/less/style.less
+++ b/less/style.less
@@ -1033,6 +1033,19 @@ display: none;
         }
         }
 
+        .dots-decorate-red{
+            position: absolute;
+            right: 88px;
+            bottom: -31px;
+        
+        }
+        .dots-decorate-blue{
+            position: absolute;
+            left: 10%;
+            top: 31px;
+        
+        }
+
     &__slider {
         display: flex;
         align-items: center;
@@ -1202,6 +1215,7 @@ display: none;
         bottom: -50%;
         transform: translate(0, -50%);
     }
+   
 }
 .admission-block-wrap {
     display: flex;
@@ -1539,6 +1553,12 @@ display: none;
         bottom: 0;
         left: 6.25%;
         z-index: 2;
+    }
+
+    .dots-decorate {
+        position: absolute;
+        right: 6.25%;
+        bottom: 50px;
     }
 }
 
