--- a/less/media.less
+++ b/less/media.less
@@ -1,4 +1,13 @@
+@media screen and (max-width: 1850px) {
+    .rectangle-decorate {
+        // left: -18%;
+        // left: -476.35px;
+    }
+}
 @media screen and (max-width: 1770px) {
+
+    
+
     .rectangle-decorate-block {
         right: -88px;
     }
@@ -146,8 +155,8 @@
         // border-radius: 28px;
         // transform: rotate(135deg);
         // background: rgba(0, 150, 235, 0.7);
-        left: -45%;
-        top: -54%;
+        // left: -45%;
+        // top: -54%;
         }
     .universities {
         .square-decorate {
@@ -197,8 +206,8 @@
     // border-radius: 28px;
     // transform: rotate(135deg);
     // background: rgba(0, 150, 235, 0.7);
-    left: -45%;
-    top: -54%;
+    // left: -45%;
+    // top: -54%;
     }
 
 
