--- a/css/media.css
+++ b/css/media.css
@@ -1,6 +1,6 @@
 @media screen and (max-width: 1770px) {
   .rectangle-decorate-block {
-    right: -88px;
+    right: 0px;
   }
   .diamond-decorate {
     position: absolute;
@@ -24,6 +24,16 @@
   }
 }
 @media screen and (max-width: 1600px) {
+  .rectangle-decorate {
+    right: 50%;
+    top: -142px;
+    width: 989.42px;
+    height: 812.9px;
+  }
+  .rectangle-decorate__inner {
+    width: 939.89px;
+    height: 760.76px;
+  }
   .header-slider .dots-img {
     width: 64px;
     height: 50px;
@@ -133,6 +143,41 @@
   .header-assistent-slider {
     left: 16%;
     max-width: 680px;
+  }
+  .rectangle-decorate-block {
+    right: -106px;
+  }
+  .rectangle-decorate-block__red {
+    overflow: hidden;
+    width: 234.19px;
+    height: 234.19px;
+    background: linear-gradient(206.74deg, #ff0000 9.11%, #ce0000 98.12%);
+    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
+    border-radius: 28px;
+    transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+  }
+  .rectangle-decorate-block__transparent {
+    width: 217px;
+    height: 217px;
+    border-radius: 28px;
+    position: absolute;
+    top: 47%;
+    left: 200px;
+    z-index: 2;
+    transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0) translate(0, -50%);
+    border: 4px solid #BDBDBD;
+  }
+  .rectangle-decorate-block__arr-white {
+    position: absolute;
+    top: -83px;
+    left: -28px;
+    z-index: 3;
+  }
+  .rectangle-decorate-block__arr-transparent {
+    position: absolute;
+    top: -83px;
+    left: -5px;
+    z-index: 3;
   }
   .connection-info__item {
     display: none;
