--- a/less/style.less
+++ b/less/style.less
@@ -767,9 +767,11 @@ display: none;
 .social-nav-wrap {
     position: relative;
     z-index: 9;
+    
 }
 .social-nav {
     position: fixed;
+    display: none;
     top: 50%;
     right: 45px;
     transform: translate(0, -50%);
@@ -1160,7 +1162,7 @@ display: none;
 .slider-line {
     position: relative;
     top: 2px;
-    width: 95%;
+    width: 85%;
     max-width: 954.34px;
     height: 3px;
     background: linear-gradient(179.84deg, #F4F4F4 -0.37%, #B8B8B8 104.82%);
@@ -1217,6 +1219,7 @@ display: none;
         right: 88px;
         bottom: -50%;
         transform: translate(0, -50%);
+        z-index: -1;
     }
    
 }
