--- a/less/media.less
+++ b/less/media.less
@@ -149,17 +149,6 @@
         }
     }
     
-
-    .rectangle-decorate {
-        // position: absolute;
-        // height: 150%;
-        // width: 84%;
-        // border-radius: 28px;
-        // transform: rotate(135deg);
-        // background: rgba(0, 150, 235, 0.7);
-        // left: -45%;
-        // top: -54%;
-        }
     .universities {
         .square-decorate {
             top: -46%;
@@ -206,38 +195,17 @@
         right: -106px;
         // top: -269px;
         &__red {
-            overflow: hidden;
             width: 234.19px;
-height: 234.19px;
-            background: linear-gradient(206.74deg, #FF0000 9.11%, #CE0000 98.12%);
-            box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
-            border-radius: 28px;
-            transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0);
+            height: 234.19px;
+          
         }
         &__transparent{
-            position: absolute;
+          
             width: 217px;
             height: 217px;
-            border-radius: 28px;
-            position: absolute;
-            top: 47%;
-            left: 200px;
-            z-index: 2;
-            transform: matrix(0.71, -0.69, 0.72, 0.71, 0, 0) translate(0, -50%);
-            border: 4px solid #BDBDBD;
+           
         }
-        &__arr-white {
-            position: absolute;
-            top: -83px;
-            left: -28px;
-            z-index: 3;
-        }
-        &__arr-transparent {
-            position: absolute;
-            top: -83px;
-            left: -5px;
-            z-index: 3;
-        }
+      
         
     }
     .connection-info__item {
@@ -263,20 +231,7 @@ height: 234.19px;
     }
     
 
-    .academic-header {
-      .arrow-decorate {
-          display: none;
-      }
-        &__title {
-            font-size: 84px; 
-        }
-    }
-
-    .academic {
-        &__years {
-            font-size: 27px; 
-        }
-    }
+    
 
     .banner {
         font-size: 18px;
@@ -306,11 +261,32 @@ height: 234.19px;
         opacity: 1;
     }
     
-    // .admission-form {
-    //     &--in-block {
-          
-    //     }
-    // }
+    .academic-header {
+        .arrow-decorate {
+            display: none;
+        }
+          &__title {
+              font-size: 84px; 
+          }
+      }
+  
+      .academic {
+          &__years {
+              font-size: 27px; 
+          }
+      }
+
+      .admission-form {
+      
+    
+        &__header {
+            font-size: 23px;
+            
+        }
+    
+      
+    }
+   
 }
 
 @media screen and (max-width: 997px)  {
@@ -345,6 +321,50 @@ height: 234.19px;
     .connection-info__btn {
         padding: 12px 26px;
         margin-left: auto;
+    }
+
+    .steps-wrap{
+        display: flex;
+        justify-content: space-between;
+        margin-bottom: 26px;
+    }
+    
+    .admission-item-wrap {
+      
+        display: flex;
+        justify-content: space-between;
+    }
+    
+    .admission-item {
+        margin-top: 36px;
+        width: 100%;
+        max-width: 100%;
+        margin-bottom: 26px;
+    }
+
+    .admission-item-wrap {
+        flex-direction: column;
+        width: 100%;
+    }
+
+    .admission-form {
+       
+    
+        &--in-block {
+            width: 100%;
+            max-width: 100%
+        }
+    
+        &__header {
+          text-align: center;
+            
+        }
+    
+        &__subtitle {
+          text-align: center;
+        }
+    
+     
     }
 }
 
@@ -506,12 +526,7 @@ height: 234.19px;
 
 @media screen and (max-width: 800px) {
 
-    // .header {
-    //     position: static;
-    // }
-    // .header-slider {
-    //     margin-top: 0;
-    // }
+  
     .header--sticky {
         opacity: 1;
     }
@@ -538,9 +553,7 @@ height: 234.19px;
     }
 
   
-   
-//    .header {
-//    }
+
     .benefits-items {
         margin: 50px 0 0 0;
         display: grid;//
@@ -569,6 +582,55 @@ height: 234.19px;
 
    
 }
+
+
+@media screen and (max-width: 720px) {
+
+    .slider-line {
+      display: none;
+    }
+    .steps-wrap {
+        flex-direction: column;
+        justify-content: center;
+    }
+    .step-block {
+        max-width: 225px;
+        margin: 0px auto 29px;
+
+        &__header {
+            position: relative;
+            padding: 25px;
+                &::after {
+                    content: "";
+                    position: absolute;
+                    width: 55%;
+                    height: 37px;
+                    left: 50%;
+                    background-color: #fff;
+                    border-top: 3px solid red;
+                    bottom: -17px;
+                    transform: rotate(-20deg);
+                }
+
+                &::before {
+                    content: "";
+                    position: absolute;
+                    width: 55%;
+                    height: 36px;
+                    left: -12px;
+                    background-color: #fff;
+                    border-top: 3px solid red;
+                    bottom: -16px;
+                    transform: rotate(20deg);
+                }
+            }
+        }   
+  
+    .banner {
+        display: none;
+    }
+}
+
 
 
 @media screen and (max-width: 500px){
@@ -654,62 +716,16 @@ height: 234.19px;
     position: absolute;
 
 }
-.footer-item--contact {
-    background: #001C53;
-    margin: 20px 0 0 0;
-    min-width: 100%;
-    display: flex;
-    justify-content: center;
-    flex-direction: column;
-    text-align: center;
-}
-
-
-
-}
-// @media screen and (max-width: 1300px) {
-//     .arrow-decorate,
-//     .square-decorate {
-//         display: none;
-//     }
-//     .header-slider {
-        
-    
-//         &__nav {
-//             position: relative;
-//             margin-top: 40px;
-//             padding-bottom: 30px;
-//            max-width: 100%; //
-//            &-list {
-//             display: flex;//
-//             align-items: center;//
-//         }
-//             &-item {
-//                 padding: 9px 13px;//
-//                 background: linear-gradient(189.83deg, #0066FF -8.5%, #00369C 51.46%, #0031C4 130.73%, #018FF6 130.74%);//
-          
-//                 border-left: 0px;//
-               
-//                 display: flex;
-//                 flex-direction: column;
-//                 align-items: center;
-//                 justify-content: center;
-//             }
-//             &-icon {
-//                 display: block;
-//                 margin-bottom: 8px;//
-//             }
-    
-//             &-num {
-//                 padding: 0px;//
-//             }
-//         }
-    
-       
-//     }
+// .footer-item--contact {
+//     background: #001C53;
+//     margin: 20px 0 0 0;
+//     min-width: 100%;
+//     display: flex;
+//     justify-content: center;
+//     flex-direction: column;
+//     text-align: center;
 // }
-.universities{
-.slider-item--test {
-    display: none;
-}
+
+
+
 }
